fix label and inputs align

--- a/web/styles.css
+++ b/web/styles.css
@@ -255,6 +255,12 @@ body {
 }
 
 .btnLogin {
-  margin:0 auto;
+  margin-left: 130px;
   display:block;
 }
+
+.loginForm label {
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+}​
